err/spritemapper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spritecss'...
Compiling './lib/python3.5/site-packages/spritecss/config.py'...
***   File "./lib/python3.5/site-packages/spritecss/config.py", line 114
    print "%s\n%s\n" % (fname, "=" * len(fname))
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spritecss/css'...
Compiling './lib/python3.5/site-packages/spritecss/mapper.py'...
***   File "./lib/python3.5/site-packages/spritecss/mapper.py", line 130
    print smap.fname
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/spritecss/packing'...
Compiling './lib/python3.5/site-packages/spritecss/packing/anneal.py'...
***   File "./lib/python3.5/site-packages/spritecss/packing/anneal.py", line 302
    print "%i mile route:" % route_energy(state)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spritecss/png.py'...
***   File "./lib/python3.5/site-packages/spritecss/png.py", line 1843
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spritemapper-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
